--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -28,7 +29,6 @@
   },
   "imports": {
     "#root/*": "./*",
-    "#src/*": "./src/*",
-    "#models/*.js": "./src/database/models/*.js"
+    "#src/*": "./src/*"
   }
 }
