adjust default import directly to src

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "joi": "^17.12.2"
   },
   "imports": {
-    "#root/*": "./*",
-    "#src/*": "./src/*"
+    "#src/*": "./src/*",
+    "#root/*": "./*"
   }
 }
