--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,107 @@
+absl-py
+altair
+annotated-types
+anyio
+astunparse
+attrs
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+colorama
+distlib
+dnspython
+email-validator
+exceptiongroup
 fastapi
+fastapi-cli
+filelock
+flatbuffers
+gast
+gitdb
+GitPython
+google-auth
+google-auth-oauthlib
+google-pasta
+grpcio
+h11
+h5py
+httpcore
+httptools
+httpx
+idna
+importlib-metadata
+importlib-resources
+jax
+jinja2
+jsonschema
+jsonschema-specifications
+keras
+libclang
+Markdown
+markdown-it-py
+MarkupSafe
+mdurl
+ml-dtypes
 numpy
-pydantic
-tensorflow
-typing
-uvicorn
+oauthlib
+opt-einsum
+orjson
+packaging
+pandas
 pillow
+pipenv
+pkgutil-resolve-name
+platformdirs
+protobuf
+pyarrow
+pyasn1
+pyasn1-modules
+pydantic
+pydantic-core
+pydeck
+pygments
+python-dateutil
+python-dotenv
+python-multipart
+pytz
+PyYAML
+referencing
+requests
+requests-oauthlib
+rich
+rpds-py
+rsa
+scipy
+shellingham
+six
+smmap
+sniffio
+starlette
+streamlit
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-intel
+tensorflow-io-gcs-filesystem
+termcolor
+toml
+toolz
+tornado
+typer
+typing
+typing-extensions
+tzdata
+ujson
+urllib3
+uvicorn
+virtualenv
+watchdog
+watchfiles
+websockets
+werkzeug
+wrapt
+zipp
